criação do pop up de acesso

--- a/assets/pages/cadastro.html
+++ b/assets/pages/cadastro.html
@@ -18,8 +18,8 @@
                 <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="cadastro.html">Login</a></li>
                 <li><a href="carrinho.html">Carrinho</a></li>
+                <li id="quantidadeCarrinho">0</li>
             </ul>
         </nav>
     </header>
@@ -59,6 +59,6 @@
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
-    <script defer src="../../scripts/cadastro.js"></script>
+    <script defer type="module" src="../../scripts/cadastro.js"></script>
 </body>
 </html>
