consumo da API de busca de CEP

--- a/assets/pages/cadastro.html
+++ b/assets/pages/cadastro.html
@@ -32,9 +32,15 @@
                 <label for="formulario__cep">CEP*</label>
                 <input type="text" id="formulario__cep" placeholder="00000-000" required>
                 <label for="formulario__endereco">Endereço*</label>
-                <input type="text" id="formulario__endereco" placeholder="Logradouro, Número" required>
+                <input type="text" id="formulario__logradouro" placeholder="Logradouro" required>
+                <label for="formulario__endereco">Número*</label>
+                <input type="text" id="formulario__numero" placeholder="Logradouro" required>
                 <label for="formulario__complemento">Complemento</label>
                 <input type="text" id="formulario__complemento" placeholder="Apto, bloco, etc.">
+                <label for="formulario__endereco">Bairro*</label>
+                <input type="text" id="formulario__bairro" placeholder="Bairro" required>
+                <label for="formulario__endereco">Cidade, UF*</label>
+                <input type="text" id="formulario__cidadeUf" placeholder="Cidade, UF" required>
             </div>
             <div class="formulario__dadosAcesso">
                 <label for="formulario__email">Email*</label>
