--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -48,10 +48,22 @@
             <div class="frete__endereco">
                 <h4 class="endereco__tituo">ENTREGA</h4>
                 <div class="endereco__dados" id="usuarioEndereco">
-                    <span><h4>ENDEREÇO </h4><h4 id=""></h4></span>
-                    <span><h4>COMPLEMENTO </h4><h4 id=""></h4></span>
-                    <span><h4>CEP </h4><h4 id=""></h4></span>
-                    <span><h4>CIDADE </h4><h4 id=""></h4></span>
+                    <span>
+                        <h5>ENDEREÇO&nbsp&nbsp</h5>
+                        <h4 class="endereco__dados" id="dadosEndereco"></h4>
+                    </span>
+                    <span>
+                        <h5>COMPLEMENTO&nbsp&nbsp</h5>
+                        <h4 class="endereco__dados" id="dadosComplemento"></h4>
+                    </span>
+                    <span>
+                        <h5>CEP&nbsp&nbsp</h5>
+                        <h4 class="endereco__dados" id="dadosCep"></h4>
+                    </span>
+                    <span>
+                        <h5>CIDADE&nbsp&nbsp</h5>
+                        <h4 class="endereco__dados" id="dadosCidade"></h4>
+                    </span>
                 </div>
             </div>
             <div class="frete_tabela">
