--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -96,19 +96,19 @@
                 <table class="resumo__somaValores">
                     <tr>
                         <td id="somaValores__itens">subtotal</td>
-                        <td id="somaValores__valorItens"></td>
+                        <td id="somaValores__valorItens">-</td>
                     </tr>
                     <tr>
                         <td id="somaValores__desconto">desconto</td>
-                        <td id="somaValores__valorDesconto">R$&nbsp0,00</td>
+                        <td id="somaValores__valorDesconto">-</td>
                     </tr>
                     <tr>
                         <td id="somaValores__frete">frete</td>
-                        <td id="somaValores__valorFrete"></td>
+                        <td id="somaValores__valorFrete">-</td>
                     </tr>
                     <tr>
                         <td id="somaValores__total">TOTAL</td>
-                        <td id="somaValores__valorTotal"></td>
+                        <td id="somaValores__valorTotal">-</td>
                     </tr>
                 </table>
             </div>
