reorganizacao das pastas

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
             </section>
             <section id="topo__loja">
-                <a href="./assets/pages/vitrine.html?filtro=novidades">
+                <a href="./pages/vitrine.html?filtro=novidades">
                     <div id="topo__novidades">NOVIDADES</div>
                 </a>
-                <a href="./assets/pages/vitrine.html?filtro=ofertas">
+                <a href="./pages/vitrine.html?filtro=ofertas">
                     <div id="topo__ofertas">TODAS AS OFERTAS</div>
                 </a>
             </section>
@@ -65,22 +65,22 @@
             <h1>CONFIRA NOSSOS PRODUTOS</h1>
         </div>
         <section class="conteudo__vitrine">
-            <a href="./assets/pages/vitrine.html?categoria=categoriaA">
+            <a href="./pages/vitrine.html?categoria=categoriaA">
                 <div class="vitrine__categorias">                
                     <h2>Categoria A</h2>
                 </div>                
             </a>   
-            <a href="./assets/pages/vitrine.html?categoria=categoriaB">
+            <a href="./pages/vitrine.html?categoria=categoriaB">
                 <div class="vitrine__categorias">                
                     <h2>Categoria B</h2>
                 </div>                
             </a>   
-            <a href="./assets/pages/vitrine.html?categoria=categoriaC">
+            <a href="./pages/vitrine.html?categoria=categoriaC">
                 <div class="vitrine__categorias">                
                     <h2>Categoria C</h2>
                 </div>                
             </a>            
-            <a href="./assets/pages/vitrine.html?categoria=categoriaD">
+            <a href="./pages/vitrine.html?categoria=categoriaD">
                 <div class="vitrine__categorias">                
                     <h2>Categoria D</h2>
                 </div>                
