--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../icons/favicon.png">
+    <link rel="shortcut icon" href="../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin.css">
     <title>EC_Admin</title>
     <style>
@@ -85,7 +85,7 @@
     <script defer type="module" src="../../scripts/admin.js"></script>
 </body>
 </html>
-
+<!-- 
 <h1>Cadastro de produto</h1>
             <form action="">
                 <h3>Informações gerais</h3>
@@ -138,4 +138,4 @@
                 <button>
                     <input type="submit" value="Cadastrar">
                 </button>
-            </form>
+            </form> -->
