--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../icons/favicon.png">
+    <link rel="shortcut icon" href="../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/cadastro.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
@@ -68,7 +68,7 @@
     </main>
     <footer>
         <button id="acessoAdmin" onclick="abrirAcessoAdmin()">
-            <img src="../icons/2135A6-regular_admin.svg" alt="">
+            <img src="../assets/icons/2135A6-regular_admin.svg" alt="">
         </button>
         <h5>contato@ecommerce.com</h5>
     </footer>
