--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../icons/favicon.png">
+    <link rel="shortcut icon" href="../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/main.css">
     <link rel="stylesheet" href="../../styles/carrinho.css">
     <title>EC_Carrinho</title>
@@ -20,7 +20,7 @@
             <div class="menu__busca">
                 <label for="buscaProdutos"></label>
                 <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
-                <button id="botaoBuscar"><img src="../icons/2135A6-light_busca.svg" alt=""></button>
+                <button id="botaoBuscar"><img src="../assets/icons/2135A6-light_busca.svg" alt=""></button>
             </div>
             <ul class="menu-sup__usuario">
                 <!-- CONTEÚDO INSERIDO PELO SCRIPT -->
