--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
             <h1>CONFIRA NOSSOS PRODUTOS</h1>
         </div>
         <section class="conteudo__vitrine">
-            <a href="./pages/vitrine.html?categoria=categoriaA">
+            <a href="./pages/vitrine.html?categoria=A">
                 <div class="vitrine__categorias">                
                     <h2>Categoria A</h2>
                 </div>                
             </a>   
-            <a href="./pages/vitrine.html?categoria=categoriaB">
+            <a href="./pages/vitrine.html?categoria=B">
                 <div class="vitrine__categorias">                
                     <h2>Categoria B</h2>
                 </div>                
             </a>   
-            <a href="./pages/vitrine.html?categoria=categoriaC">
+            <a href="./pages/vitrine.html?categoria=C">
                 <div class="vitrine__categorias">                
                     <h2>Categoria C</h2>
                 </div>                
             </a>            
-            <a href="./pages/vitrine.html?categoria=categoriaD">
+            <a href="./pages/vitrine.html?categoria=D">
                 <div class="vitrine__categorias">                
                     <h2>Categoria D</h2>
                 </div>                
