--- a/pages/admin/busca.html
+++ b/pages/admin/busca.html
@@ -42,6 +42,6 @@
         <div id="conteudo__titulo"></div>
         <section class="conteudo__container" id="conteudoContainer"></section>
     </main>
-    <script defer type="module" src="../../scripts/adminBusca.js"></script>
+    <script defer type="module" src="../../scripts/admin/busca.js"></script>
 </body>
 </html>
