--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin.css">
-    <title>EC_Admin_Novo Produto</title>
+    <title>EC_Admin_Edição Produto</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
     </style>
@@ -100,6 +100,6 @@
             </div>
         </section>
     </main>
-    <script defer type="module" src="../../scripts/admin/novoProduto.js"></script>
+    <script defer type="module" src="../../scripts/admin/edicaoProduto.js"></script>
 </body>
 </html>
