--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
-    <link rel="stylesheet" href="../../styles/admin.css">
-    <title>EC_Admin_Edição Produto</title>
+    <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
+    <title id="tituloHead"></title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
     </style>
@@ -42,7 +42,7 @@
         <div id="conteudo__titulo"></div>
         <section id="conteudoContainer">
             <div id="containerTitulo">
-                <h1>CADASTRO DE PRODUTO</h1>
+                <h1>EDIÇÃO DE PRODUTO</h1>
             </div>
             <div class="container__formulario" id="containerFormulario">
                 <form action="">
