--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -123,6 +123,7 @@
             <div class="conclusao__planoDeFundo">
                 <div class="conclusao__popup">
                     <div class="popup__mensagem">
+                        <!-- <img src="../assets/images/2135A6_qrcode-pagamento.svg" alt="QR Code PIX"> -->
                         <h2>COMPRA FINALIZADA</h2>
                         <h2>PREVISÃO DE ENTREGA</h2>
                         <h2 id="previsaoEntrega"></h2>
