--- a/pages/admin/busca.html
+++ b/pages/admin/busca.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
-    <link rel="stylesheet" href="../../styles/admin.css">
+    <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
     <title>EC_Admin_Busca</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
@@ -33,10 +33,9 @@
         </div>
     </header>
     <section class="menu__busca">
-        <h3>Buscar Produtos</h3>
         <label for="buscaProdutos"></label>
-        <input type="text" id="buscaProdutos">
-        <button id="botaoBuscar">Buscar</button>
+        <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
+        <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
         <div id="conteudo__titulo"></div>
