--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -33,16 +33,15 @@
         </div>
     </header>
     <section class="menu__busca">
-        <h3>Buscar Produtos</h3>
         <label for="buscaProdutos"></label>
-        <input type="text" id="buscaProdutos">
-        <button id="botaoBuscar">Buscar</button>
+        <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
+        <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
-        <div id="conteudo__titulo"></div>
+        <div id="conteudo__titulo">DASHBOARD</div>
         <section id="conteudoContainer">
             <div id="containerTitulo">
-                <h1>DASHBOARD</h1>
+                <h1></h1>
             </div>
             <div class="container__dashboard" id="containerDashboard">
                 <div>
