--- a/pages/admin/categoria.html
+++ b/pages/admin/categoria.html
@@ -33,14 +33,15 @@
         </div>
     </header>
     <section class="menu__busca">
-        <h3>Buscar Produtos</h3>
         <label for="buscaProdutos"></label>
-        <input type="text" id="buscaProdutos">
-        <button id="botaoBuscar">Buscar</button>
+        <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
+        <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
         <div id="conteudo__titulo"></div>
-        <section class="conteudo__container" id="conteudoContainer"></section>
+        <section class="conteudo__container" id="conteudoContainer">
+            
+        </section>
     </main>
     <script defer type="module" src="../../scripts/admin/categoria.js"></script>
 </body>
