--- a/pages/admin/novoProduto.html
+++ b/pages/admin/novoProduto.html
@@ -33,17 +33,13 @@
         </div>
     </header>
     <section class="menu__busca">
-        <h3>Buscar Produtos</h3>
         <label for="buscaProdutos"></label>
-        <input type="text" id="buscaProdutos">
-        <button id="botaoBuscar">Buscar</button>
+        <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
+        <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
-        <div id="conteudo__titulo"></div>
-        <section id="conteudoContainer">
-            <div id="containerTitulo">
-                <h1>CADASTRO DE PRODUTO</h1>
-            </div>
+        <div id="conteudo__titulo">CADASTRO DE PRODUTO</div>
+        <section class="conteudo__container" id="conteudoContainer">
             <div class="container__formulario" id="containerFormulario">
                 <form action="">
                     <h3>Informações gerais</h3>
