--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <div class="menu__lateral">
+            <h2>E_COMMERCE</h2>
             <div>
                 <h3><a href="./dashboard.html">Dashboard</a></h3>
             </div>
@@ -22,6 +23,12 @@
                 <a href="./categoria.html?categoria=B">Categoria B</a>
                 <a href="./categoria.html?categoria=C">Categoria C</a>
                 <a href="./categoria.html?categoria=D">Categoria D</a>
+            </div>
+            <div class="menu__listas">
+                <h3>Listas</h3>
+                <a href="">Ofertas</a>
+                <a href="">Novidades</a>
+                <a href="">Repor estoque</a>
             </div>
             <div class="menu__cadastrar">
                 <h3>Cadatrar</h3>
