--- a/pages/admin/busca.html
+++ b/pages/admin/busca.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
+    <link rel="stylesheet" href="../../styles/admin/categoria.css">
     <title>EC_Admin_Busca</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
@@ -26,9 +27,9 @@
             </div>
             <div class="menu__listas">
                 <h3>Listas</h3>
-                <a href="">Ofertas</a>
-                <a href="">Novidades</a>
-                <a href="">Repor estoque</a>
+                <a href="./busca.html?filtro=oferta">Ofertas</a>
+                <a href="./busca.html?filtro=novidade">Novidades</a>
+                <a href="./busca.html?filtro=estoque">Repor estoque</a>
             </div>
             <div class="menu__cadastrar">
                 <h3>Cadatrar</h3>
