--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -19,16 +19,16 @@
             </div>
             <div class="menu__existentes">
                 <h3>Produtos Cadastrados</h3>
-                <a href="./categoria.html?categoria=A">Categoria A</a>
-                <a href="./categoria.html?categoria=B">Categoria B</a>
-                <a href="./categoria.html?categoria=C">Categoria C</a>
-                <a href="./categoria.html?categoria=D">Categoria D</a>
+                <a href="./filtro.html?categoria=A">Categoria A</a>
+                <a href="./filtro.html?categoria=B">Categoria B</a>
+                <a href="./filtro.html?categoria=C">Categoria C</a>
+                <a href="./filtro.html?categoria=D">Categoria D</a>
             </div>
             <div class="menu__listas">
                 <h3>Listas</h3>
-                <a href="">Ofertas</a>
-                <a href="">Novidades</a>
-                <a href="">Repor estoque</a>
+                <a href="./filtro.html?filtro=ofertas">Ofertas</a>
+                <a href="./filtro.html?filtro=novidades">Novidades</a>
+                <a href="./filtro.html?filtro=estoque">Repor estoque</a>
             </div>
             <div class="menu__cadastrar">
                 <h3>Cadatrar</h3>
@@ -40,10 +40,9 @@
         </div>
     </header>
     <section class="menu__busca">
-        <h3>Buscar Produtos</h3>
         <label for="buscaProdutos"></label>
-        <input type="text" id="buscaProdutos">
-        <button id="botaoBuscar">Buscar</button>
+        <input type="text" id="buscaProdutos" placeholder="Busque os produtos">
+        <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
         <div id="conteudo__titulo"></div>
