exclusao de arquivos ultrapassados

--- a/pages/admin/filtro.html
+++ b/pages/admin/filtro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
-    <link rel="stylesheet" href="../../styles/admin/categoria.css">
+    <link rel="stylesheet" href="../../styles/admin/filtro.css">
     <title>EC_Admin_Categoria</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
