--- a/pages/admin/novoProduto.html
+++ b/pages/admin/novoProduto.html
@@ -46,60 +46,73 @@
         <button id="botaoBuscar"><img src="../../assets/icons/2135A6-light_busca.svg" alt=""></button>
     </section>
     <main class="conteudo__principal">
-        <div id="conteudo__titulo">CADASTRO DE PRODUTO</div>
+        <div id="conteudo__titulo">
+            <h1>CADASTRO DE PRODUTO</h1>
+            <button class="formulario__botao">
+                <input type="submit" value="Cadastrar" id="botaoCadastrar">
+            </button>
+        </div>
         <section class="conteudo__container" id="conteudoContainer">
             <div class="container__formulario" id="containerFormulario">
-                <form action="">
-                    <h3>Informações gerais</h3>
-                    <label for="id">ID:</label>
-                    <input type="text" name="id" id="id" placeholder="0000" disabled>
-                        <label for="nome">Nome:</label>
+                <form action="" class="formulario">
+                    <fieldset class="formulario__geral">
+                        <h3 id="geral__titulo">GERAL</h3>
+                        <div id="divId">
+                            <label for="id">ID</label>
+                            <input type="text" name="id" id="id" placeholder="0000" disabled>
+                        </div>
+                        <label for="nome">Nome</label>
                         <input type="text" name="nome" id="nome" placeholder="Nome do produto" required>
-                        <label for="categoria">Categoria:</label>
-                        <select name="categoria" id="" title="Categoria:" required>
+                        <label for="categoria">Categoria</label>
+                        <select name="categoria" id="categoria" title="Categoria:" required>
+                            <option value="" disabled selected hidden>Escolha a categoria do produto</option>
                             <option value="A">Categoria A</option>
                             <option value="B">Categoria B</option>
                             <option value="C">Categoria C</option>
                             <option value="D">Categoria D</option>
                         </select>
-                        <label for="descricao">Descrição:</label>
+                        <label for="descricao">Descrição</label>
                         <textarea name="descricao" id="descricao" autocapitalize="sentences" minlength="10" maxlength="250" placeholder="Descrição do produto" required></textarea>
-                    <h3>Valor</h3>
+                    </fieldset>
+                    <fieldset class="formulario__valor">
+                        <h3>VALOR</h3>
                         <label for="precoString">R$</label>
-                        <input type="text" name="precoString" id="precoString" placeholder="Valor do produto"required>
+                        <input type="text" name="precoString" id="precoString" placeholder="Valor do produto" required>
                         <label for="precoFloat">R$</label>
-                        <input type="text" name="precoFloat" id="precoFloat" placeholder="Valor do produto" disabled>
-                    <h3>Imagem</h3>
+                        <input type="text" name="precoFloat" id="precoFloat" placeholder="0.00" disabled>
+                    </fieldset>
+                    <fieldset class="formulario__imagem" id="formularioImagem">
+                        <h3>IMAGEM</h3>
                         <label for="imagem">Imagem principal</label>
                         <input type="file" name="imagem" id="imagem" placeholder="Imagem do produto" required>
                         <label for="imagemAlt">Descição da imagem</label>
-                        <input type="text" name="imagemAlt"id="imagemAlt" placeholder="Breve descição da imagem" required>
-                    <h3>Desconto</h3>
-                        <h4>O produto possui desconto?</h4>
+                        <input type="text" name="imagemAlt" id="imagemAlt" placeholder="Breve descição da imagem" required>
+                    </fieldset>
+                    <fieldset class="formulario__status">
+                        <h3>STATUS</h3>
+                        <h4>Desconto</h4>
+                        <h5>O produto está em oferta?</h5>
                         <label>
-                            <input type="radio" name="oferta" value="true"> POSSUI desconto
+                            <input type="radio" name="oferta" value="true"> SIM
                         </label>
                         <label>
-                            <input type="radio" name="oferta" value="false"> NÃO POSSUI desconto
+                            <input type="radio" name="oferta" value="false"> NÃO
                         </label>
-                        <h4>Insita o novo valor do produto:</h4>
+                        <h5>Insira o novo valor do produto:</h5>
                         <label for="precoComOferta">R$</label>
                         <input type="text" name="precoComOferta" id="precoComOferta" placeholder="Valor do produto com desconto" disabled>
-                    <h3>Novidade</h3>
-                    <h4>O produto é uma novidade?</h4>
-                    <label>
-                        <input type="radio" name="oferta" value="true"> Sim
-                    </label>
-                    <label>
-                        <input type="radio" name="oferta" value="false"> Não
-                    </label>
-                    <h3>Estoque</h3>
+                        <h4>Novidade</h4>
+                        <h5>O produto é uma novidade?</h5>
+                        <label>
+                            <input type="radio" name="novidade" value="true"> Sim
+                        </label>
+                        <label>
+                            <input type="radio" name="novidade" value="false"> Não
+                        </label>
+                        <h3>Estoque</h3>
                         <label for="estoque">Quantidade em estoque:</label>
-                        <input type="number" name="estoque" id="estoque" placeholder="Quantidade em estoque"required>
-                    <h3>Finalizar</h3>
-                    <button>
-                        <input type="submit" value="Cadastrar">
-                    </button>
+                        <input type="number" name="estoque" id="estoque" placeholder="Quantidade em estoque" required>
+                    </fieldset>
                 </form>
             </div>
         </section>
