--- a/pages/admin/novoProduto.html
+++ b/pages/admin/novoProduto.html
@@ -56,7 +56,7 @@
             <div class="container__formulario" id="containerFormulario">
                 <form action="" class="formulario">
                     <fieldset class="formulario__geral">
-                        <h3 id="geral__titulo">GERAL</h3>
+                        <h3 id="geral__titulo"><legend>GERAL</legend></h3>
                         <div id="divId">
                             <label for="id">ID</label>
                             <input type="text" name="id" id="id" placeholder="0000" disabled>
@@ -75,44 +75,63 @@
                         <textarea name="descricao" id="descricao" autocapitalize="sentences" minlength="10" maxlength="250" placeholder="Descrição do produto" required></textarea>
                     </fieldset>
                     <fieldset class="formulario__valor">
-                        <h3>VALOR</h3>
-                        <label for="precoString">R$</label>
-                        <input type="text" name="precoString" id="precoString" placeholder="Valor do produto" required>
-                        <label for="precoFloat">R$</label>
-                        <input type="text" name="precoFloat" id="precoFloat" placeholder="0.00" disabled>
+                        <h3><legend>PREÇO</legend></h3>
+                        <div class="divPrecos">
+                            <div class="preco__container">
+                                <label for="precoString">R$</label>
+                                <input type="text" name="precoString" id="precoString" placeholder="0,00" required>
+                            </div>
+                            <div class="preco__container">
+                                <label for="precoFloat">R$</label>
+                                <input type="text" name="precoFloat" id="precoFloat" placeholder="0.00" disabled>
+                            </div>
+                        </div>
                     </fieldset>
                     <fieldset class="formulario__imagem" id="formularioImagem">
-                        <h3>IMAGEM</h3>
+                        <h3><legend>IMAGENS</legend></h3>
                         <label for="imagem">Imagem principal</label>
                         <input type="file" name="imagem" id="imagem" placeholder="Imagem do produto" required>
                         <label for="imagemAlt">Descição da imagem</label>
                         <input type="text" name="imagemAlt" id="imagemAlt" placeholder="Breve descição da imagem" required>
                     </fieldset>
-                    <fieldset class="formulario__status">
-                        <h3>STATUS</h3>
-                        <h4>Desconto</h4>
-                        <h5>O produto está em oferta?</h5>
-                        <label>
-                            <input type="radio" name="oferta" value="true"> SIM
-                        </label>
-                        <label>
-                            <input type="radio" name="oferta" value="false"> NÃO
-                        </label>
-                        <h5>Insira o novo valor do produto:</h5>
-                        <label for="precoComOferta">R$</label>
-                        <input type="text" name="precoComOferta" id="precoComOferta" placeholder="Valor do produto com desconto" disabled>
-                        <h4>Novidade</h4>
-                        <h5>O produto é uma novidade?</h5>
-                        <label>
-                            <input type="radio" name="novidade" value="true"> Sim
-                        </label>
-                        <label>
-                            <input type="radio" name="novidade" value="false"> Não
-                        </label>
-                        <h3>Estoque</h3>
-                        <label for="estoque">Quantidade em estoque:</label>
-                        <input type="number" name="estoque" id="estoque" placeholder="Quantidade em estoque" required>
+                    <fieldset class="formulario__oferta">
+                        <h3><legend>OFERTA</legend></h3>
+                        <div class="divOferta">
+                            <div class="oferta__input" id="ofertaInput">
+                                <p>Produto em oferta?</p>                             
+                                <label for="ofertaFalse">
+                                    <input type="radio" name="oferta" value="false" id="ofertaFalse">NÃO
+                                </label>
+                                <label for="ofertaTrue">
+                                    <input type="radio" name="oferta" value="true" id="ofertaTrue">SIM
+                                </label>
+                            </div>
+                            <div class="oferta__preco">
+                                <label for="precoComOferta">Novo preço: R$</label>
+                                <input type="text" name="precoComOferta" id="precoComOferta" placeholder="0.00" disabled>
+                            </div>
+                        </div>
                     </fieldset>
+                    <fieldset class="formulario__novidade">
+                        <h3><legend>NOVIDADE</legend></h3>
+                        <div class="novidade__container">
+                            <p>O produto é uma novidade?</p>
+                            <label>
+                                <input type="radio" name="novidade" value="true"> SIM
+                            </label>
+                            <label>
+                                <input type="radio" name="novidade" value="false"> NÃO
+                            </label>
+                        </div>
+                    </fieldset>
+                    <fieldset class="formulario__estoque">
+                        <h3><legend>ESTOQUE</legend></h3>
+                        <div class="estoque__container">
+                            <label for="estoque">Quantidade em estoque:</label>
+                            <input type="number" name="estoque" id="estoque" placeholder="Quantidade em estoque" required>
+                        </div>
+                    </fieldset>
+                    
                 </form>
             </div>
         </section>
